[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]

[project]
name = "tlp-python"
version = "0.1.0"
description = "Backend TLP algorithms."
authors = [
    {name = "Rudra Menon", email = "rmenon@enginius.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ai_doc_parser @ file:packages/ai_doc_parser",
]

[project.optional-dependencies]
# Install development dependencies with: pip install -e ".[dev]"
dev = [
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "autoflake>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]
